web/html/src/branding/css/base/theme.less
/**
 * This file is the old core theme file, over time we can hopefully clean this up and separate the logic accordingly
 */

html,
body {
  height: 100%;
  min-height: 100%;
  min-width: fit-content;
  margin: 0;
  max-height: 100%;
  overflow: hidden;
}

body {
  display: flex;
  flex-direction: column;
  background: @body-background;
  font-family: @lato;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}
 
a {
  color: @link-color;
  cursor: pointer;
}

header {
  height:auto;
  width: 100%;
  border: none;
  border-radius: 0;
  border-bottom: 2px solid darken(@green, 10%);
  margin-bottom: 0;
  background: @header;

  .header-content {
    padding: 12px 10px;
  }

  a {
    color: @header-text;
  }

  a:hover {
    color: @header-text;
  }

  img {
    float: left;
  }
}

.spacewalk-main-column-layout {
  display: flex;
  flex: 1 1 auto;
  overflow: hidden;

  aside {
    overflow: auto !important;
    float: none !important;
    position: relative !important;

    footer {
      position: -webkit-sticky;
      position: sticky;
      bottom: 0;
    }
  }

  section {
    width: 100% !important;
    float: none !important;
  }

  #page-body {
    flex: 1 1 auto;
    overflow: auto;
  }
}

footer {
  border-top: 1px solid @footer-border;
  background: @footer;
  padding: 3px 12px;
  color: @footer-text;
  font-weight: normal;
  font-size: 0.9em;
  height: auto;
  min-height: auto;
  clear: both;
  position: absolute;
  bottom: 0px;
  width: 100%;
  .make-row(0);

  a {
    color: @footer-links;
    text-decoration: underline;
  }

  a:hover {
    color: @footer-hover;
  }

  /* override spacewalk rules */
  div:nth-child(1),
  div:nth-child(2) {
    float: none;
    width: 100%;
    margin: 0;
    min-height: auto;
    text-align: left!important;
    padding: 0;
  }

  div.wrapper {
    background: url('/img/susemanager/suse-logo-footer.svg') no-repeat right 18px;
    background-size: 32px 16px;
    min-height: 28px;
    padding-right: 55px!important;
    > div {
      padding: 3px 0 2px 0;
    }
  }
}

/* override spacewalk rules */
section {
  transition: none!important;
  -webkit-transition: none!important;
}

.spacewalk-main-column-layout {
  .make-row(0);
  /* override the grid row margin */
  margin-right: 0;
  margin-left: 0;
   aside {
    .make-xs-column(2);
    min-width: 16.66667%;
    max-width: 16.66667%;
    background: @aside;
    border-right: 1px solid @aside-border;
    /* erasing the predefined paddings in the columns */
    padding: 0;
    position: fixed;
    #nav nav ul.level1 {
      overflow-y: auto !important;
      scrollbar-color: rgba(200, 200, 200, 0.5) transparent;
      scrollbar-width: thin;
      &::-webkit-scrollbar {
        width: 7px;
      }
      &::-webkit-scrollbar-thumb {
        border-radius: 10px;
        -webkit-box-shadow: inset 0 0 6px rgba(200, 200, 200, 0.5);
        background: rgba(200, 200, 200, 0.5);
      }
    }
  }

  /* fixing margins in the 1st and last columns */
  section {
    .make-xs-column(10);
    padding-left:4em;
    padding-right: 4em;
    padding-top: 0;
    padding-bottom: 4em;
    float: right;
  }
}

#breadcrumb {
  color: @header-text;
  display: inline-block;
  span {
    vertical-align: bottom;
  }
  span.level, a {
    padding: 0 3px;
  }
  i {
    margin-right: 0;
  }
}

.navbar-right {
  float: right;
}

.navbar-collapse {
  display: flex;
  flex-direction: column;

  #nav {
    display: flex;
    flex-direction: column;
    flex: 1 1 auto;
    overflow: hidden;

    nav {
      display: flex;
      flex-direction: column;
      overflow: hidden;

      > ul {
        flex: 1 1 auto;
        margin: 0 !important;
      }
    }
  }

  &.in {
    display: flex !important;
  }

  &.collapse {
    display: none !important;
  }
}
/* ... */

